# mosaic-flax

./: README.md  inference.py  inference_dp.py  inference_pp.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
mosaicgpt_flax/: __init__.py  generate.py  mosaic_gpt.py  utils.py
tests/: 3b.yaml  90m.yaml  test_mosaicgpt.py  test_t5x.py
