[tool.isort]
profile = "black"
multi_line_output = 0
line_length = 80

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["mosaicgpt_flax"]

[tool.pydocstyle]
convention = "google"
add-ignore = "D10"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rA"
testpaths = ["tests"]

[project]
name = "mosaic-flax"
description = ""
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dynamic = ["version", "dependencies"]


[project.optional-dependencies]
test = [
    "mosaicml-examples[llm-cpu] @ git+https://github.com/mosaicml/examples.git",
    "black",
    "isort",
    "flake8",
    "pre-commit",
]
